--- a/index.html
+++ b/index.html
@@ -5,57 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bourdeaux</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="img/iconos/android-chrome-512x512.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    <!-- Inicio Nav -->
-    <nav>
-        <a href="index.html">
-            <img src="img/png/logo-no-background.png" alt="Logo de Bourdeaux" class="logo">
-        </a>
-        <ul>
-            <li>
-                <a href="index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="pages/cervezas.html">Cervezas</a>
-            </li>
-            <li>
-               <a href="pages/gastronomia.html">Gastronomia</a>
-            </li>
-            <li>
-               <a href="pages/locales.html">Locales</a>
-            </li>
-            <li>
-               <a href="pages/contacto.html">Contacto</a>
-            </li>
-        </ul>
-    </nav>
-    <!-- Fin Nav -->
-    <header>
-        <img src="img/pexels-michelle-riach-995686.jpg" alt="Bourdeaux Cervezas" class="principal" >
+    <!-- script js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+    <!-- inicio nav -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand nav-item active" aria-current="page" href="index.html"> <img src="img/iconos/android-chrome transparent-512x512.png" width="40em"" alt="Logo"> Bourdeaux</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="pages/cervezas.html">Cervezas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/gastronomia.html">Gastronomia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/locales.html">Locales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- fin nav -->   
+      <!-- imagen principal -->
+    <header class="center">
+        <img src="img/pexels-michelle-riach-995686.jpg" alt="Bourdeaux Cervezas" class="responsive" >
     </header>
-    <main class="caja">
+    <!-- intro titulo -->
+    <main class="center">
         <h1>Bourdeaux, cervecería artesanal</h1>
         <p>Una cervecería con identidad propia, un blend de lo tradicional con la innovación.</p>
     </main>
-    <footer>
+    <!-- inicio footer -->
+    <footer class="center">
         <a href="index.html">
-            <img src="img/png/logo-white.png" alt="Logo de Bourdeaux">
+            <img src="img/png/logo-white transparent.png" alt="Logo de Bourdeaux" class="logo">
             <br>
         <a href="https://www.facebook.com/" target="_blank">
             <img src="img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
         </a>
-        <a href="https:twitter.com" target="_blank">
+        <a href="https://twitter.com" target="_blank">
             <img src="img/iconos/Twitter.png" alt="Nuestro Twitter" class="icono">
         </a>
-        <a href="https:instagram.com" target="_blank">
+        <a href="https://instagram.com" target="_blank">
             <img src="img/iconos/Instagram.png" alt="Nuestro Instagram" class="icono">
         </a>
         
 
                 
     </footer>
+    <!-- fin footer -->
     </body>
 </html>
