--- a/pages/cervezas.html
+++ b/pages/cervezas.html
@@ -5,64 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cervezas</title>
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/x-icon" href="../img/iconos/android-chrome-512x512.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">    
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <nav>
-        <a href="../index.html">
-            <img src="../img/png/logo-no-background.png"alt="Logo de Bourdeaux" class="logo">
-        </a>
-        <ul>
-            <li>
-                <a href="../index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="cervezas.html">Cervezas</a>
-            </li>
-            <li>
-               <a href="gastronomia.html">Gastronomia</a>
-            </li>
-            <li>
-               <a href="locales.html">Locales</a>
-            </li>
-            <li>
-               <a href="contacto.html">Contacto</a>
-            </li>
-        </ul>
-    </nav>
+    <!-- script js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+    <!-- inicio nav -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand nav-item" href="../index.html"> <img src="../img/iconos/android-chrome transparent-512x512.png" width="40em"" alt="Logo"> Bourdeaux</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="cervezas.html">Cervezas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="gastronomia.html">Gastronomia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="locales.html">Locales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      <!-- fin nav -->   
+      <h1>¿Cómo disfrutar nuestras cervezas?</h1> 
+      <!-- Inicio carousel -->
         <main>
-        <h1>¿Cómo disfrutar nuestras cervezas?</h1>
-            <section class="flex-direction">
-                <article>    <img src="../img/para llevar.jpg" alt="Para llevar" class="triple">
-                <h2>Para llevar</h2>
-                <p>De esta manera podés elegir retirarlas y gozar de un 10% de descuento.</p>
-                </article>
-                <article><img src="../img/en el local.jpg" alt="En el local" class="triple">
-                <h2>En nuestro local</h2>
-                <p>Disfrutá de nuestros <a href="locales.html">locales</a> ambientados para que disfrutes de tu salida.</p>
-                </article>
-                <article><img src="../img/degustaciones.jpg" alt="Degustaciones" class="triple">
-                <h2>Degustaciones</h2>
-                <p>No te pierdas de nuestras degustaciones donde podrás probar nuevos sabores y experiencias.</p>
-                </article>
-            </section>
+            <div id="carouselExampleCaptions" class="carousel slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img img src="../img/para llevar.jpg" alt="Para llevar" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block cajita">
+                      <h5>Para llevar</h5>
+                      <p>De esta manera podés elegir retirarlas y gozar de un 10% de descuento.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/en el local.jpg" alt="En el local" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block cajita">
+                      <h5>En nuestros locales</h5>
+                      <p>Disfrutá de nuestros <a href="locales.html">locales</a> ambientados para que disfrutes de tu salida.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img img src="../img/degustaciones.jpg" alt="Degustaciones" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block cajita">
+                      <h5>Degustaciones</h5>
+                      <p>No te pierdas de nuestras degustaciones donde podrás disfrutar nuevos sabores y experiencias.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+              <!-- fin carousel -->
         </main>
+        <!-- inicio footer -->
     <footer>
-        <a href="index.html">
-            <img src="../img/png/logo-white.png" alt="Logo de Bourdeaux">
+        <a href="../index.html">
+            <img src="../img/png/logo-white transparent.png" alt="Logo de Bourdeaux" class="logo">
             <br>
         <a href="https://www.facebook.com/" target="_blank">
             <img src="../img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
         </a>
-        <a href="https:twitter.com" target="_blank">
+        <a href="https://twitter.com" target="_blank">
             <img src="../img/iconos/Twitter.png" alt="Nuestro Twitter" class="icono">
         </a>
-        <a href="https:instagram.com" target="_blank">
+        <a href="https://instagram.com" target="_blank">
             <img src="../img/iconos/Instagram.png" alt="Nuestro Instagram" class="icono">
         </a>
 
                 
     </footer>
+    <!-- fin footer -->
 </body>
 </html>
