--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -5,74 +5,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gastronomia</title>
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/x-icon" href="../img/iconos/android-chrome-512x512.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
+
 
 </head>
 <body>
-    <nav>
-        <a href="../index.html">
-            <img src="../img/png/logo-no-background.png" alt="Logo de Bourdeaux" class="logo">
-        </a>
-        <ul>
-            <li>
-                <a href="../index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="cervezas.html">Cervezas</a>
-            </li>
-            <li>
-               <a href="gastronomia.html">Gastronomia</a>
-            </li>
-            <li>
-               <a href="locales.html">Locales</a>
-            </li>
-            <li>
-               <a href="contacto.html">Contacto</a>
-            </li>
-        </ul>
-    </nav>
-      <main>
-        <h1>Gastronomia</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dA0VGEbbw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <table border="1px" cellpadding="10px">
-            <tr>
-                <th>Nombre</th>
-                <th>Precio</th>
-                <th>Ingredientes</th>
-            </tr>
-            <tr>
+    <!-- inicio nav -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand nav-item" href="../index.html"> <img src="../img/iconos/android-chrome transparent-512x512.png" width="40em"" alt="Logo"> Bourdeaux</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="cervezas.html">Cervezas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="gastronomia.html">Gastronomia</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="locales.html">Locales</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- fin nav -->
+      <main class="flex-wrap">
+        <!-- video youtube -->
+        <h1 class="center">Gastronomia</h1>
+        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/dA0VGEbbw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<div class="table-responsive">
+    <!-- tabla precios menu -->
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Burger</th>
+                <th scope="col">Precio</th>
+                <th scope="col">Ingredientes</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
                 <td>Big Burger</td>
                 <td>$1250</td>
                 <td>Doble burger, pepinillos, lechuga, cebollas y cheddar.</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
                 <td>Stack Burger</td>
                 <td>$1300</td>
                 <td>Burger, bacon, cheddar y salsa especial.</td>
-            </tr>
-            <tr>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
                 <td>Shack Burger</td>
                 <td>$1500</td>
                 <td>Burger, lechuga, cebolla morada, cheddar, manteca y mayonesa.</td>
-            </tr>
-        </table>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        
     </main>
-    <footer>
-        <a href="index.html">
-            <img src="../img/png/logo-white.png" alt="Logo de Bourdeaux">
+    <!-- inicio footer -->
+    <footer class="center">
+        <a href="../index.html">
+            <img src="../img/png/logo-white transparent.png" class="logo" alt="Logo de Bourdeaux">
             <br>
         <a href="https://www.facebook.com/" target="_blank">
             <img src="../img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
         </a>
-        <a href="https:twitter.com" target="_blank">
+        <a href="https://twitter.com" target="_blank">
             <img src="../img/iconos/Twitter.png" alt="Nuestro Twitter" class="icono">
         </a>
-        <a href="https:instagram.com" target="_blank">
+        <a href="https://instagram.com" target="_blank">
             <img src="../img/iconos/Instagram.png" alt="Nuestro Instagram" class="icono">
         </a>
 
                 
     </footer>
+    <!-- fin footer -->
 </body>
 </html>
