--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <img src="img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="img/iconos/Twitter.png" alt="Nuestro Twitter" class="icono">
+            <img src="img/iconos/twitter.png" alt="Nuestro Twitter" class="icono">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="img/iconos/Instagram.png" alt="Nuestro Instagram" class="icono">
+            <img src="img/iconos/instagram.png" alt="Nuestro Instagram" class="icono">
         </a>
         
 
