--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -12,6 +12,10 @@
 
 </head>
 <body>
+  <!-- script js -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+
     <!-- inicio nav -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -86,10 +90,10 @@
             <img src="../img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="../img/iconos/Twitter.png" alt="Nuestro Twitter" class="icono">
+            <img src="../img/iconos/twitter.png" alt="Nuestro Twitter" class="icono">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="../img/iconos/Instagram.png" alt="Nuestro Instagram" class="icono">
+            <img src="../img/iconos/instagram.png" alt="Nuestro Instagram" class="icono">
         </a>
 
                 
