--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Cerveza, Hamburguesa, Argentina, Cerveceria, Restaurant">
     <title>Gastronomia</title>
     <link rel="icon" type="image/x-icon" href="../img/iconos/android-chrome-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 
 
 </head>
 <body>
-  <!-- script js -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
-
-    <!-- inicio nav -->
+     <!-- inicio nav -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand nav-item" href="../index.html"> <img src="../img/iconos/android-chrome transparent-512x512.png" width="40em"" alt="Logo"> Bourdeaux</a>
@@ -42,43 +39,151 @@
         </div>
       </nav>
       <!-- fin nav -->
-      <main class="flex-wrap">
+      <main>
         <!-- video youtube -->
-        <h1 class="center">Gastronomia</h1>
-        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/dA0VGEbbw4g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<div class="table-responsive">
-    <!-- tabla precios menu -->
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Burger</th>
-                <th scope="col">Precio</th>
-                <th scope="col">Ingredientes</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Big Burger</td>
-                <td>$1250</td>
-                <td>Doble burger, pepinillos, lechuga, cebollas y cheddar.</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Stack Burger</td>
-                <td>$1300</td>
-                <td>Burger, bacon, cheddar y salsa especial.</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Shack Burger</td>
-                <td>$1500</td>
-                <td>Burger, lechuga, cebolla morada, cheddar, manteca y mayonesa.</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+        <h1 class= center>Gastronomia</h1>
+        <div class="vcontenedor">
+        <iframe class="video" src="https://www.youtube.com/embed/dA0VGEbbw4g?&autoplay=1&mute=1&playsinline=1" title="YouTube video player" frameborder="0" autoplay=1 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+
+<!-- burgers comprar -->
+        <main class="container-fluid py-2">
+          <h1 class="text-center mt-1">Burgers</h1>
+          <div class="row">
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger1.jpg" class="card-img-top w-100" alt="Bourdeaux Simple + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Bourdeaux Simple + Papas Fritas</h2>
+                  <p class="card-text">Medallon x1 Cheddar Fetas x2 Bacon Cebolla Crispy Aderezo Bourdeaux.</p>
+                  <a href="#" class="btn btn-success">+ $2600</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 1 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger2.jpeg" class="card-img-top w-100" alt="Bourdeaux Doble + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Bourdeaux Doble + Papas Fritas</h2>
+                  <p class="card-text">Medallon x2 Cheddar Fetas x4 Bacon Cebolla Crispy Aderezo Bourdeaux.</p>
+                  <a href="#" class="btn btn-success">+ $2900</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 2 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger3.jpeg" class="card-img-top w-100" alt="Sweet Onion Simple + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Sweet Onion Simple + Papas Fritas</h2>
+                  <p class="card-text">Medallon x1 Cheddar Fetas x2 Bacon Cebolla Caramelizada</p>
+                  <a href="#" class="btn btn-success">+ $2600</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 3 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger4.jpeg" class="card-img-top w-100" alt="Sweet Onion Doble + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Sweet Onion Doble + Papas Fritas</h2>
+                  <p class="card-text">Medallon x2 Cheddar Fetas x4 Bacon Cebolla Caramelizada</p>
+                  <a href="#" class="btn btn-success">+ $2900</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 4 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger5.jpeg" class="card-img-top w-100" alt="Cheese Burger Simple + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Cheese Burger Simple + Papas Fritas</h2>
+                  <p class="card-text">Medallon x1 Cheddar Feta x2</p>
+                  <a href="#" class="btn btn-success">+ $2200</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 5-->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger6.jpeg" class="card-img-top w-100" alt="Cheese Burger Doble + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Cheese Burger Doble + Papas Fritas</h2>
+                  <p class="card-text">Medallon x2 Cheddar x4</p>
+                  <a href="#" class="btn btn-success">+ $2600</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 6 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger7.jpeg" class="card-img-top w-100" alt="Cheese Burger Triple + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Cheese Burger Triple + Papas Fritas</h2>
+                  <p class="card-text">Medallon x3 Cheddar Fetas x6</p>
+                  <a href="#" class="btn btn-success">+ $3100</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 7 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger8.jpeg" class="card-img-top w-100" alt="American Burger Simple + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">American Burger Simple + Papas Fritas</h2>
+                  <p class="card-text">Medallon x 1 Cheddar Fetas x2 Tomate Lechuga Cebolla Cruda Dill Pickles Aderezo Thousand Island</p>
+                  <a href="#" class="btn btn-success">+ $2500</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 8 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger9.jpeg" class="card-img-top w-100" alt="American Burger Doble + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">American Burger Doble + Papas Fritas</h2>
+                  <p class="card-text">Medallon x2 Cheddar Fetas x4 Tomate Lechuga Cebolla Cruda Dill Pickles Aderezo Thousand Island</p>
+                  <a href="#" class="btn btn-success">+ $2800</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 9 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger10.jpeg" class="card-img-top w-100" alt="Grilled Onion + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Grilled Onion + Papas Fritas</h2>
+                  <p class="card-text">Medallon x2 Cheddar x4 Cebolla Grilled</p>
+                  <a href="#" class="btn btn-success">+ $2600</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 10 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger11.jpg" class="card-img-top w-100" alt="Royal Simple + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Royal Simple + Papas Fritas</h2>
+                  <p class="card-text">Medallon x1 Cheddar Fetas x2 Cebolla Cruda Ketchup Mostaza Pepino</p>
+                  <a href="#" class="btn btn-success">+ $2300</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 11 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/burger12.jpeg" class="card-img-top w-100" alt="Royal Doble + Papas Fritas">
+                <div class="card-body">
+                  <h2 class="card-title">Royal Doble + Papas Fritas</h2>
+                  <p class="card-text">Medallon x2 Cheddar Fetas x4 Cebolla Cruda Ketchup Mostaza Pepino</p>
+                  <a href="#" class="btn btn-success">+ $2600</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends burger 12 -->
+          </div>
+          <!-- ends row -->
         
     </main>
     <!-- inicio footer -->
@@ -99,5 +204,9 @@
                 
     </footer>
     <!-- fin footer -->
+  <!-- script js -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+
 </body>
 </html>
