--- a/pages/locales.html
+++ b/pages/locales.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Cerveza, Hamburguesa, Argentina, Cerveceria, Restaurant">
     <title>Document</title>    
     <link rel="icon" type="image/x-icon" href="../img/iconos/android-chrome-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 
 </head>
 <body>
-    <!-- script js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
-    <!-- inicio nav -->
+        <!-- inicio nav -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand nav-item" href="../index.html"> <img src="../img/iconos/android-chrome transparent-512x512.png" width="40em"" alt="Logo"> Bourdeaux</a>
@@ -44,9 +42,9 @@
       <!-- inicio carousel -->
        <main class="container-fluid py-3">
         <h1>¿Dónde podés disfrutar nuestras cervezas?</h1>        
-        <section class="row">
+        <section class="row center">
         <div class="card col-sm-12 col-md-6 col-lg-3">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6564.143698137955!2d-58.619302673963816!3d-34.65288837178689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc766f69d4def%3A0x803d4b81f7644c00!2sThe%20Laundry%20Garage!5e0!3m2!1ses!2sar!4v1680296670997!5m2!1ses!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6564.143698137955!2d-58.619302673963816!3d-34.65288837178689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc766f69d4def%3A0x803d4b81f7644c00!2sThe%20Laundry%20Garage!5e0!3m2!1ses!2sar!4v1680296670997!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
               <h5 class="card-title">Moron</h5>
               <p class="card-text">Bartolome Mitre 724</p>
@@ -54,7 +52,7 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13136.945021564887!2d-58.5435728!3d-34.5981869!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb77dca39b35d%3A0x36149dcdad56b540!2sSantos%20Barriles!5e0!3m2!1ses!2sar!4v1677957996108!5m2!1ses!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13136.945021564887!2d-58.5435728!3d-34.5981869!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb77dca39b35d%3A0x36149dcdad56b540!2sSantos%20Barriles!5e0!3m2!1ses!2sar!4v1677957996108!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
               <h5 class="card-title">Santos Lugares</h5>
               <p class="card-text">Rodríguez Peña 1493</p>
@@ -62,15 +60,15 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-6 col-lg-3">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2986208874195!2d-58.65969504952231!3d-34.647160667208425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf5a990cb90d%3A0xa8301d6a825dda7a!2sThe%20Laundry!5e0!3m2!1ses!2sar!4v1680296782084!5m2!1ses!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2986208874195!2d-58.65969504952231!3d-34.647160667208425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf5a990cb90d%3A0xa8301d6a825dda7a!2sThe%20Laundry!5e0!3m2!1ses!2sar!4v1680296782084!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
               <h5 class="card-title">Castelar</h5>
               <p class="card-text">Santa Rosa 1037</p>
               <a href="tel:+541538474312" class="btn btn-success">TEL: 15-3847-4312</a>
             </div>
           </div>
-          <div class="card col-sm-12 col-md-6 col-lg-3">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13142.105359486028!2d-58.4323658!3d-34.5655463!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5bbbb6c68b1%3A0xf0b7e65c66da69f7!2sKansas!5e0!3m2!1ses!2sar!4v1677957867812!5m2!1ses!2sar" width="auto" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
+          <div class="card col-sm-12 col-md-6 col-lg-3 center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13142.105359486028!2d-58.4323658!3d-34.5655463!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5bbbb6c68b1%3A0xf0b7e65c66da69f7!2sKansas!5e0!3m2!1ses!2sar!4v1677957867812!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
               <h5 class="card-title">Palermo</h5>
               <p class="card-text">Del Libertador 4625</p>
@@ -99,6 +97,9 @@
                 
     </footer>
         <!-- fin footer -->
+        <!-- script js -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
 
 </body>
 </html>
