--- a/pages/cervezas.html
+++ b/pages/cervezas.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Cerveza, Hamburguesa, Argentina, Cerveceria, Restaurant">
     <title>Cervezas</title>
     <link rel="icon" type="image/x-icon" href="../img/iconos/android-chrome-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">    
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <!-- script js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
     <!-- inicio nav -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -52,21 +50,21 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img img src="../img/para llevar.jpg" alt="Para llevar" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block cajita">
+                    <div class="carousel-caption d-md-block cajita">
                       <h5>Para llevar</h5>
-                      <p>De esta manera podés elegir retirarlas y gozar de un 10% de descuento.</p>
+                      <p>Podés elegir <a href="#cervezas">comprar en la web</a> para retirar, gozando de un 10% de descuento.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="../img/en el local.jpg" alt="En el local" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block cajita">
+                    <div class="carousel-caption d-md-block cajita">
                       <h5>En nuestros locales</h5>
                       <p>Disfrutá de nuestros <a href="locales.html">locales</a> ambientados para que disfrutes de tu salida.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img img src="../img/degustaciones.jpg" alt="Degustaciones" class="d-block w-100">
-                    <div class="carousel-caption d-none d-md-block cajita">
+                    <div class="carousel-caption d-md-block cajita">
                       <h5>Degustaciones</h5>
                       <p>No te pierdas de nuestras degustaciones donde podrás disfrutar nuevos sabores y experiencias.</p>
                     </div>
@@ -83,11 +81,150 @@
               </div>
 
               <!-- fin carousel -->
-        </main>
+
+              <!-- beers comprar -->
+        <div id="cervezas" class="container-fluid py-2 center">
+          <h1 class="text-center mt-1">Cervezas</h1>
+          <div class="row center">
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer1.webp" class="card-img-top w-100" alt="Young's Double Chocolate Stout">
+                <div class="card-body">
+                  <h2 class="card-title">Young's Double Chocolate Stout</h2>
+                  <p class="card-text">5.2% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2100</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 1 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer2.webp" class="card-img-top w-100" alt="BrewDog Hazy Jane">
+                <div class="card-body">
+                  <h2 class="card-title">BrewDog Hazy Jane</h2>
+                  <p class="card-text">7.2% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2400</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 2 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer3.webp" class="card-img-top w-100" alt="BrewDog Lost Lager">
+                <div class="card-body">
+                  <h2 class="card-title">BrewDog Lost Lager</h2>
+                  <p class="card-text">4.5% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2400</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 3 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer4.webp" class="card-img-top w-100" alt="Brothers Cherry Bakewell English Cider">
+                <div class="card-body">
+                  <h2 class="card-title">Brothers Cherry Bakewell English Cider</h2>
+                  <p class="card-text">4.0% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2100</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 4 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer5.webp" class="card-img-top w-100" alt="Wychwood Hobgoblin IPA">
+                <div class="card-body">
+                  <h2 class="card-title">Wychwood Hobgoblin IPA</h2>
+                  <p class="card-text">5.3% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2800</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 5-->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer6.webp" class="card-img-top w-100" alt="Wychwood Hobgoblin Gold English Golden Ale<">
+                <div class="card-body">
+                  <h2 class="card-title">Wychwood Hobgoblin Gold English Golden Ale</h2>
+                  <p class="card-text">4.5% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2800</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 6 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer7.webp" class="card-img-top w-100" alt="Wychwood Hobgoblin Ruby English Amber Ale">
+                <div class="card-body">
+                  <h2 class="card-title">Wychwood Hobgoblin Ruby English Amber Ale</h2>
+                  <p class="card-text">5.2% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2800</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 7 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer8.webp" class="card-img-top w-100" alt="4 Pines Hazy Pale Ale">
+                <div class="card-body">
+                  <h2 class="card-title">4 Pines Hazy Pale Ale</h2>
+                  <p class="card-text">6.0% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2400</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 8 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer9.webp" class="card-img-top w-100" alt="4 Pines Ultra Low">
+                <div class="card-body">
+                  <h2 class="card-title">4 Pines Ultra Low</h2>
+                  <p class="card-text">Menos de 0.5% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2800</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 9 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer10.webp" class="card-img-top w-100" alt="4 Pines Aussie Wheat Ale 4.7% ABV">
+                <div class="card-body">
+                  <h2 class="card-title">4 Pines Aussie Wheat Ale 4.7% ABV</h2>
+                  <p class="card-text">4.7% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2400</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 10 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer11.webp" class="card-img-top w-100" alt="4 Pines Japanese Style Lager">
+                <div class="card-body">
+                  <h2 class="card-title">4 Pines Japanese Style Lager</h2>
+                  <p class="card-text">4.5% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2800</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 11 -->
+            <article class="col-sm-12 col-md-6 col-lg-3 mb-2">
+              <div class="card">
+                <img src="../img/beer12.webp" class="card-img-top w-100" alt="Beerfarm Pump up the Jam Sour Ale Raspberry, Blackberry & Pink Peppercorn">
+                <div class="card-body">
+                  <h2 class="card-title">Beerfarm Pump up the Jam Sour Ale Raspberry, Blackberry & Pink Peppercorn</h2>
+                  <p class="card-text">4.2% ABV</p>
+                  <a href="#" class="btn btn-success">+ $2600</a>
+                </div>
+              </div>
+            </article>
+            <!-- ends beer 12 -->
+          </div>
+          <!-- ends row -->
+        </div>
         <!-- inicio footer -->
     <footer>
         <a href="../index.html">
-            <img src="../img/png/logo-white transparent.png" alt="Logo de Bourdeaux" class="logo">
+            < src="..//png/logo-white transparent.png" alt="Logo de Bourdeaux" class="logo">
             <br>
         <a href="https://www.facebook.com/" target="_blank">
             <img src="../img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
@@ -102,5 +239,9 @@
                 
     </footer>
     <!-- fin footer -->
+    <!-- script js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+    
 </body>
 </html>
