--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Cerveza, Hamburguesa, Argentina, Cerveceria, Restaurant">
     <title>Contacto</title>
     <link rel="icon" type="image/x-icon" href="../img/iconos/android-chrome-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 
 
 </head>
 <body>
-    <!-- script js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
     <!-- inicio nav -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -47,6 +45,8 @@
            
          <!-- inicio formulario -->
         <body>
+            <h1>Contactanos</h1>
+
             <div class="main-block contacto">
               <div class="left-part">
                 <i class="fas fa-envelope"></i>
@@ -54,7 +54,6 @@
                 <i class="fas fa-mail-bulk"></i>
               </div>
               <form action="/">
-                <h1>Contactanos</h1>
                 <h5>Podés escribirnos por acá o por <a href="mailto:dobalissimo@gmail.com">email</a></h5>
                 <div class="info">
                   <input class="fname" type="text" name="name" placeholder="Nombre y apellido">
@@ -92,6 +91,9 @@
         </footer>
         <!-- fin footer -->
 
+<!-- script js -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
         
 </body>
 </html>
