--- a/pages/cervezas.html
+++ b/pages/cervezas.html
@@ -223,18 +223,18 @@
         </div>
         <!-- inicio footer -->
     <footer>
-        <a href="../index.html">
-            < src="..//png/logo-white transparent.png" alt="Logo de Bourdeaux" class="logo">
-            <br>
-        <a href="https://www.facebook.com/" target="_blank">
-            <img src="../img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
-        </a>
-        <a href="https://twitter.com" target="_blank">
-            <img src="../img/iconos/twitter.png" alt="Nuestro Twitter" class="icono">
-        </a>
-        <a href="https://instagram.com" target="_blank">
-            <img src="../img/iconos/instagram.png" alt="Nuestro Instagram" class="icono">
-        </a>
+            <a href="../index.html">
+                <img src="../img/png/logo-white transparent.png" class="logo" alt="Logo de Bourdeaux">
+                <br>
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="../img/iconos/facebook.png" alt="Nuestro Facebook" class="icono">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="../img/iconos/twitter.png" alt="Nuestro Twitter" class="icono">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="../img/iconos/instagram.png" alt="Nuestro Instagram" class="icono">
+            </a>
 
                 
     </footer>
