--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,7 +73,7 @@
         </main>
         <!-- fin formulario -->
         <!-- inicio footer -->
-        <footer class="decorate">
+        <footer>
             <a href="../index.html">
                 <img src="../img/png/logo-white transparent.png" class="logo" alt="Logo de Bourdeaux">
                 <br>
