--- a/pages/gastronomia.html
+++ b/pages/gastronomia.html
@@ -187,7 +187,7 @@
         
     </main>
     <!-- inicio footer -->
-    <footer class="center">
+    <footer>
         <a href="../index.html">
             <img src="../img/png/logo-white transparent.png" class="logo" alt="Logo de Bourdeaux">
             <br>
