--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Cristian Flores">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Cerveza, Hamburguesa, Argentina, Cerveceria, Restaurant">
     <title>Contacto</title>
@@ -54,7 +55,7 @@
                 <i class="fas fa-mail-bulk"></i>
               </div>
               <form action="/">
-                <h5>Podés escribirnos por acá o por <a href="mailto:dobalissimo@gmail.com">email</a></h5>
+                <h4>Podés escribirnos por acá o por <a href="mailto:dobalissimo@gmail.com">email</a></h4>
                 <div class="info">
                   <input class="fname" type="text" name="name" placeholder="Nombre y apellido">
                   <input type="text" name="name" placeholder="Email">
@@ -73,7 +74,7 @@
         </main>
         <!-- fin formulario -->
         <!-- inicio footer -->
-        <footer>
+        <footer class="center">
             <a href="../index.html">
                 <img src="../img/png/logo-white transparent.png" class="logo" alt="Logo de Bourdeaux">
                 <br>
