--- a/pages/locales.html
+++ b/pages/locales.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Cristian Flores">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Cerveza, Hamburguesa, Argentina, Cerveceria, Restaurant">
     <title>Document</title>    
@@ -41,12 +42,12 @@
       <!-- fin nav -->  
       <!-- inicio carousel -->
        <main class="container-fluid py-3">
-        <h1>¿Dónde podés disfrutar nuestras cervezas?</h1>        
+        <h1 class="text-center mb-5">¿Dónde podés disfrutar nuestras cervezas?</h1>        
         <section class="row center">
         <div class="card col-sm-12 col-md-6 col-lg-3">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6564.143698137955!2d-58.619302673963816!3d-34.65288837178689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc766f69d4def%3A0x803d4b81f7644c00!2sThe%20Laundry%20Garage!5e0!3m2!1ses!2sar!4v1680296670997!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
-              <h5 class="card-title">Moron</h5>
+              <h4 class="card-title">Moron</h4>
               <p class="card-text">Bartolome Mitre 724</p>
               <a href="tel:+541122591855" class="btn btn-success">TEL: 2259-1855</a>
             </div>
@@ -54,7 +55,7 @@
           <div class="card col-sm-12 col-md-6 col-lg-3">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13136.945021564887!2d-58.5435728!3d-34.5981869!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb77dca39b35d%3A0x36149dcdad56b540!2sSantos%20Barriles!5e0!3m2!1ses!2sar!4v1677957996108!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
-              <h5 class="card-title">Santos Lugares</h5>
+              <h4 class="card-title">Santos Lugares</h4>
               <p class="card-text">Rodríguez Peña 1493</p>
               <a href="tel:+541147579598" class="btn btn-success">TEL: 4757-9598</a>
             </div>
@@ -62,15 +63,15 @@
           <div class="card col-sm-12 col-md-6 col-lg-3">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2986208874195!2d-58.65969504952231!3d-34.647160667208425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf5a990cb90d%3A0xa8301d6a825dda7a!2sThe%20Laundry!5e0!3m2!1ses!2sar!4v1680296782084!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
-              <h5 class="card-title">Castelar</h5>
+              <h4 class="card-title">Castelar</h4>
               <p class="card-text">Santa Rosa 1037</p>
               <a href="tel:+541538474312" class="btn btn-success">TEL: 15-3847-4312</a>
             </div>
           </div>
-          <div class="card col-sm-12 col-md-6 col-lg-3 center">
+          <div class="card col-sm-12 col-md-6 col-lg-3">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13142.105359486028!2d-58.4323658!3d-34.5655463!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5bbbb6c68b1%3A0xf0b7e65c66da69f7!2sKansas!5e0!3m2!1ses!2sar!4v1677957867812!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>>
             <div class="card-body">
-              <h5 class="card-title">Palermo</h5>
+              <h4 class="card-title">Palermo</h4>
               <p class="card-text">Del Libertador 4625</p>
               <a href="tel:+541147764100" class="btn btn-success">TEL: 4776-4100</a>
             </div>
@@ -80,7 +81,7 @@
     </main>
     <!-- fin carousel -->
     <!-- inicio footer -->
-    <footer>
+    <footer class="center">
         <a href="../index.html">
             <img src="../img/png/logo-white transparent.png" class="logo" alt="Logo de Bourdeaux">
             <br>
